--- a/app/src/main/res/layout/fragment_news_cards.xml
+++ b/app/src/main/res/layout/fragment_news_cards.xml
@@ -31,24 +31,18 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:background="@color/greenery">
 
             <TextView
                 android:id="@+id/txtTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/hello_blank_fragment"
                 android:textAlignment="center"
-                android:textColor="@color/greenery"
+                android:textColor="#fff"
                 android:textSize="22sp"
                 android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/txtText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/hello_blank_fragment"
-                android:textColor="@color/trueBlue" />
         </LinearLayout>
 
     </LinearLayout>
