--- a/app/src/main/res/layout/detalles_evento.xml
+++ b/app/src/main/res/layout/detalles_evento.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:weightSum="1">
+    android:weightSum="1"
+    android:background="@color/viridianGreen">
 
     <ImageView
         android:id="@+id/imgEvento"
@@ -24,7 +25,7 @@
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
             android:layout_weight="1"
-            android:text="TextView" />
+            android:textColor="#fff" />
 
     </LinearLayout>
 
@@ -45,21 +46,8 @@
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
                 android:layout_weight="1"
-                android:text="TextView" />
+                android:textColor="@color/blueRadiance"
+                />
         </LinearLayout>
     </ScrollView>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="33dp"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/txtfechayhora"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="TextView" />
-    </LinearLayout>
-
 </LinearLayout>
