--- a/app/src/main/res/layout/activity_recycler_view_news.xml
+++ b/app/src/main/res/layout/activity_recycler_view_news.xml
@@ -7,5 +7,5 @@
     android:layout_height="match_parent"
     android:background="@color/viridianGreen"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.sicma.sicmapp.RecyclerViewNewsActivity"
+    tools:context="com.sicma.sicmapp.Activitys.RecyclerViewNewsActivity"
     tools:showIn="@layout/activity_recycler_view_news"></android.support.v7.widget.RecyclerView>
