--- a/app/src/main/res/layout/fragment_news_cards.xml
+++ b/app/src/main/res/layout/fragment_news_cards.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content"
     android:layout_margin="16dp"
     app:cardElevation="5dp"
-    tools:context="com.sicma.sicmapp.NewsCards">
+    tools:context="com.sicma.sicmapp.Transfroms_Adapters.NewsCards">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -37,7 +37,7 @@
                 android:id="@+id/txtTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/hello_blank_fragment"
+                android:text=""
                 android:textAlignment="center"
                 android:textColor="@color/greenery"
                 android:textSize="22sp"
@@ -47,7 +47,7 @@
                 android:id="@+id/txtText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/hello_blank_fragment"
+                android:text=""
                 android:textColor="@color/trueBlue" />
         </LinearLayout>
 
