--- a/app/src/main/res/layout/fragment_news_cards.xml
+++ b/app/src/main/res/layout/fragment_news_cards.xml
@@ -31,7 +31,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:background="@color/greenery">
 
             <TextView
                 android:id="@+id/txtTitle"
@@ -39,7 +40,7 @@
                 android:layout_height="wrap_content"
                 android:text=""
                 android:textAlignment="center"
-                android:textColor="@color/greenery"
+                android:textColor="@color/colorWhite"
                 android:textSize="22sp"
                 android:textStyle="bold" />
 
