--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -31,7 +31,7 @@
     -->
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="35dp"
         android:background="@color/viridianGreen"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
