--- a/app/src/main/res/drawable/tab_puntos_select.xml
+++ b/app/src/main/res/drawable/tab_puntos_select.xml
@@ -6,7 +6,7 @@
             android:shape="ring"
             android:thickness="4.5dp"
             android:useLevel="false">
-            <solid android:color="#88bdbdbd"/>
+            <solid android:color="#fff"/>
         </shape>
     </item>
 </layer-list>
