--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -47,7 +47,7 @@
             android:layout_alignParentRight="true"
             android:layout_marginRight="25dp"
             android:background="@android:color/white"
-            android:hint="Search Location"
+            android:hint="Buscar..."
             android:textColor="@android:color/black" />
 
         <ImageView
