--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -13,22 +13,6 @@
         android:layout_alignParentTop="true"
         class="com.google.android.gms.maps.SupportMapFragment" />
 
-    <!--
-    <TextView
-        android:id="@+id/latlongLocation"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignRight="@+id/searchView1"
-        android:background="#ff058fff"
-        android:gravity="bottom"
-        android:paddingBottom="5dp"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp"
-        android:paddingTop="5dp"
-        android:textColor="#ffffffff" />
-    -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="35dp"
@@ -47,7 +31,7 @@
             android:layout_alignParentRight="true"
             android:layout_marginRight="25dp"
             android:background="@android:color/white"
-            android:hint="Buscar..."
+            android:hint="@string/auto_edit_text"
             android:textColor="@android:color/black" />
 
         <ImageView
