--- a/app/src/main/res/layout/activity_desc_events.xml
+++ b/app/src/main/res/layout/activity_desc_events.xml
@@ -10,7 +10,7 @@
     <RelativeLayout
         android:id="@+id/rl_detail_bg"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="386dp"
         android:layout_gravity="center"
         android:layout_marginBottom="48dp"
         android:scaleType="centerCrop"
