--- a/app/src/main/res/layout/infolayout.xml
+++ b/app/src/main/res/layout/infolayout.xml
@@ -63,15 +63,15 @@
     <ImageView
         android:id="@+id/imglogoSICMA"
         android:layout_width="wrap_content"
-        android:layout_height="325dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="25dp"
+        android:layout_height="270dp"
+        android:layout_marginBottom="113dp"
         android:layout_weight="1"
         android:padding="5dp"
         android:scaleType="fitXY"
-        app:srcCompat="@drawable/sicma_logo" />
+        app:srcCompat="@drawable/sicma_logo"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
 
 </RelativeLayout>
